--- a/benchmark-java-webapp/pom.xml
+++ b/benchmark-java-webapp/pom.xml
@@ -175,7 +175,7 @@
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.1.0.RC2</version>
+        <version>9.1.0.v20131115</version>
         <configuration>
           <contextPath>/</contextPath>
           <scanIntervalSeconds>1</scanIntervalSeconds>
@@ -183,7 +183,16 @@
         </configuration>
 
       </plugin>
-            
+      <plugin>
+        <groupId>com.google.appengine</groupId>
+        <artifactId>appengine-maven-plugin</artifactId>
+        <version>1.8.8-maven3.0</version>
+        <configuration>
+                  
+          <fullScanSeconds>1</fullScanSeconds>
+          <server>preview.appengine.google.com</server>
+        </configuration>
+      </plugin>           
     </plugins>
   </build>
 
